--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@ header {
   text-align: center;
   background: #f3fbe8;
 }
+.nav-main--container {
+  height: 100px;
+}
 
 
 .nav-toggler {
